--- a/Natours/index.html
+++ b/Natours/index.html
@@ -25,6 +25,107 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              orem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?
+              Eius ad quod dolore voluptate officiis. Fuga saepe quisquam
+              impedit, sapiente autem dignissimos? Beatae quod dolorem facilis
+              quia animi rem.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventurous like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab,
+              rerum?
+            </p>
+            <a href="#" class="btn-text">Learn More &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+
+            </div>
+          </div> </div>
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+              <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Find your Way</h3>
+              <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+              <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, beatae.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3"> 
+        <div class="card">
+          <div class="card__side card__side--front">
+          FRONT
+        </div>  
+        <div class="card__side card__side--back card__side--back-1">
+          BACK
+        </div>  
+        </div>
+        </div>
+        <div class="col-1-of-3"> Col 1 of 3 </div>
+        <div class="col-1-of-3"> Col 1 of 3 </div>
+      </div>
+      </section>
+    </main>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2"> Col 1 of 2 </div>
