--- a/Natours/index.html
+++ b/Natours/index.html
@@ -13,6 +13,27 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+
+<div class="navigation">
+  <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+  
+  <label for="navi-toggle" class="navigation__button">
+    <span class="navigation__icon">&nbsp;</span>
+  </label>
+  
+  <div class="navigation__background">&nbsp;</div>
+  
+  <nav class="navigation__nav">
+    <ul class="navigation__list">
+      <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+      <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your Benefits</a></li>
+      <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Tours</a></li>
+      <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+      <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book Now</a></li>
+    </ul>
+  </nav>
+</div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -22,7 +43,7 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#sectionTours" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
     <main>
@@ -103,7 +124,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="sectionTours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Most popular tours
@@ -136,7 +157,7 @@
               <p class="card__price-only">Only</p>
               <p class="card__price-value">$297</p>
             </div>
-            <a href="#" class="btn btn--white">Book Now</a>
+            <a href="#popup" class="btn btn--white">Book Now</a>
           </div>
         </div>  
         </div>
@@ -167,7 +188,7 @@
                 <p class="card__price-only">Only</p>
                 <p class="card__price-value">$497</p>
               </div>
-              <a href="#" class="btn btn--white">Book Now</a>
+              <a href="#popup" class="btn btn--white">Book Now</a>
             </div>
           </div>    
         </div>
@@ -198,7 +219,7 @@
                 <p class="card__price-only">Only</p>
                 <p class="card__price-value">$897</p>
               </div>
-              <a href="#" class="btn btn--white">Book Now</a>
+              <a href="#popup" class="btn btn--white">Book Now</a>
             </div>
           </div>    
         </div> 
@@ -309,7 +330,7 @@
             <ul class="footer__list">
               <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
               <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Carriers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
               <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
               <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
             </ul>
@@ -317,11 +338,27 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built by <a href="https://github.com/JAKiley/AdvancedCSS/tree/main/Natours" class="footer__link">Judy Kiley </a>  as part of the <a href="https://www.udemy.com/course/advanced-css-and-sass/" class="footer__link">Advance CSS and SASS course</a> Copyright &copy by Jonas Schmedtmann. You are 100% allowed to use this for a webpage for both personal and commerical use, but NOT to claim it as your own design.  A credit to the original author, Jonas Schmedtmann is of course highly appreicated!
+            Built by <a href="https://github.com/JAKiley/AdvancedCSS/tree/main/Natours" class="footer__link">Judy Kiley </a>  as part of the <a href="https://www.udemy.com/course/advanced-css-and-sass/" class="footer__link">Advance CSS and SASS course</a> Copyright &copy by Jonas Schmedtmann. You are 100% allowed to use this for a webpage for both personal and commerical use, but NOT to claim it as your own design.  A credit to the original author, <a href="https://www.udemy.com/user/jonasschmedtmann/" class="footer__link">Jonas Schmedtmann</a> is of course highly appreicated!
           </p>
         </div>
       </div>
     </footer>
+
+  <div class="popup" id="popup">
+    <div class="popup__content">
+      <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+        <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+      </div>
+      <div class="popup__right">
+        <a href="#sectionTours" class="popup__close">&times;</a>
+        <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+        <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before</h3>
+        <p class="popup__text">Blanditiis non voluptas quidem tenetur excepturi. Quibusdam, et assumenda eaque molestiae magni culpa saepe facere modi. Fuga quae, eius nam vero ipsa magni, dignissimos dolores eos labore non similique? Esse magnam dolores praesentium iure, delectus odio architecto cum! Reprehenderit hic soluta error nisi sed quam maxime pariatur nostrum autem nulla culpa laudantium rem obcaecati fugiat quisquam, ipsam nemo architecto saepe, veritatis minus aliquam nam aut? Fuga natus cumque hic nobis excepturi reiciendis blanditiis, quo quidem consequatur unde odio at totam aliquam iusto illum expedita officiis accusantium. Similique corrupti inventore porro deserunt veritatis.</p>
+     <a href="#popup" class="btn btn--green">book now</a> 
+      </div>
+    </div>
+  </div>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2"> Col 1 of 2 </div>
